--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3auth/default-evm-adapter": "^8.4.1",
+    "@web3auth/ethereum-provider": "^8.4.1",
+    "@web3auth/modal": "^8.4.1",
+    "@web3auth/openlogin-adapter": "^8.4.1",
+    "@web3auth/wallet-services-plugin": "^8.4.1",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "14.2.18",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18"
   },
