--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
-    "next": "^14.2.18",
+    "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18"
   },
