--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.460.0",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
