--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3auth/default-evm-adapter": "^8.4.1",
-    "@web3auth/ethereum-provider": "^8.4.1",
-    "@web3auth/modal": "^8.4.1",
-    "@web3auth/openlogin-adapter": "^8.4.1",
-    "@web3auth/wallet-services-plugin": "^8.4.1",
-    "ethers": "^6.13.4",
-    "framer-motion": "^11.11.17",
-    "lucide-react": "^0.460.0",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
-    "uuid": "^11.0.3"
+    "@web3auth/base": "7.2.0",
+    "@web3auth/modal": "7.2.0",
+    "@web3auth/web3auth-wagmi-connector": "7.2.0",
+    "ethers": "^5.7.2",
+    "@pushprotocol/restapi": "^1.4.45",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
